fix: overflow af the grid

--- a/src/views/content/service/organism/ServiceGrid.css
+++ b/src/views/content/service/organism/ServiceGrid.css
@@ -1,5 +1,5 @@
 #service-grid {
-  @apply overflow-scroll w-[2880px];
+  @apply overflow-x-scroll w-[2880px];
 }
 
 #service-grid-top {
