--- a/src/views/content/service/organism/ServiceList.css
+++ b/src/views/content/service/organism/ServiceList.css
@@ -1,5 +1,5 @@
 #service-list {
-  @apply w-[200px] border border-l-0 border-y-0 border-black;
+  @apply w-[25vw] border border-l-0 border-y-0 border-black;
 }
 
 #service-list-header {
