--- a/src/views/content/service/template/ServiceTemplate.css
+++ b/src/views/content/service/template/ServiceTemplate.css
@@ -1,3 +1,3 @@
 #service-template {
-  @apply flex overflow-hidden;
+  @apply flex w-[90vw];
 }
